# intis-test

./: .editorconfig  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  pyproject.toml  scratch.py
http/: nginx.conf
http/www/: apartman_12.ics  apartman_4.ics
migrations/: env.py
migrations/versions/: 22471700b90d_init.py  57fecdf95897_init_database.py  7e03361b241d_initialize.py  9269e33ed1b9_bare_essentials.py  f2bf984ca682_init.py  fc9ed9363413_initialize_database.py
src/: settings.py
src/data/: entity.py  models.py  service.py  value.py
src/entrypoint/: server.py
src/templates/: index.html  signin.html
src/web/: __init__.py  app.py  auth.py  dependencies.py  parser.py  server.py
src/web/routes/: __init__.py  api.py  login.py  security.py  ui.py
tests/: conftest.py  factories.py
tests/unit/: conftest.py  test_api.py  test_parser.py  test_token.py
tests/unit/data/: test_entities.py  test_services.py  test_value.py
tests/unit/web/: test_api.py  test_dependencies.py  test_login.py  test_login_manager.py  test_parser.py
